--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,7 @@ workspace:
 
 dev_dependencies:
   melos: ^7.0.0-dev.8
-  flutter_lints: ^6.0.0
-  test: ^1.21.0
+  very_good_analysis: ^9.0.0
 
 melos:
   name: keychat_workspace
