--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,7 +12,6 @@ analyzer:
   errors:
     # invalid_annotation_target: warning
     argument_type_not_assignable: warning
-    invalid_assignment: warning
   exclude:
     [
       build/**,
@@ -41,6 +40,6 @@ linter:
     library_private_types_in_public_api: false
     # use_null_aware_elements: true
     avoid_catches_without_on_clauses: false
-    inference_failure_on_function_invocation: false
+    public_member_api_docs: false
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
