--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,12 @@ workspace:
   - packages/keychat_rust_ffi_plugin
 
 dev_dependencies:
-  melos: ^7.0.0-dev.8
-  very_good_analysis: ^9.0.0
+  melos: 7.1.1
+  very_good_analysis: ^10.0.0
 
 melos:
   name: keychat_workspace
-  repository: https://github.com/key-chat/app-melos
+  repository: https://github.com/keychat-io/keychat-app
 
   ignore:
     - packages/app/build/**
