--- a/packages/app/flutter_launcher_icons.yaml
+++ b/packages/app/flutter_launcher_icons.yaml
@@ -29,4 +29,4 @@ flutter_launcher_icons:
 
   macos:
     generate: true
-    image_path: "assets/images/logo-bg.png"
+    image_path: "assets/images/logo-1024.png"
