--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -60,7 +60,7 @@ jobs:
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
   build-linux:
     # if: false
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     needs: get-version
     steps:
       - name: Checkout
@@ -68,13 +68,17 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 2
+      - name: setup rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+          targets: x86_64-unknown-linux-gnu,aarch64-unknown-linux-gnu
       - name: Setup-Linux
         run: |
           echo "Building for platform: linux"
           sudo apt-get update -y && sudo apt-get upgrade -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
-          rustup target add x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -121,7 +125,7 @@ jobs:
           cd ./packages/app/ && rm -f .env
 
   build-windows:
-    # if: false # Temporarily disabled for testing
+    if: false # Temporarily disabled for testing
     runs-on: windows-2022
     needs: get-version
     steps:
@@ -160,7 +164,7 @@ jobs:
           overwrite: true
 
   build-android:
-    # if: false # Temporarily disabled for testing
+    if: false # Temporarily disabled for testing
     runs-on: ubuntu-22.04
     needs: get-version
     steps:
@@ -402,7 +406,7 @@ jobs:
           rm -f .env
           rm -f macos/Runner/GoogleService-Info.plist
   upload:
-    # if: false # Temporarily disabled for testing
+    if: false # Temporarily disabled for testing
     permissions: write-all
     needs: [get-version, build-windows, build-linux, build-android]
     runs-on: ubuntu-latest
