--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -103,16 +103,16 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  build_runner: ^2.4.15
-  build: ^2.3.0
   json_serializable: ^6.9.0
   isar_community_generator: 3.3.0-dev.1
-  freezed: ^3.0.0-0.0.dev
   flutter_launcher_icons: ^0.14.4
   test: ^1.21.0
   lints: ^6.0.0
   flutter_lints: ^6.0.0
   dmg: ^0.1.3
+  freezed: ^3.1.0
+  build_runner: ^2.5.4
+  build: ^2.5.4
 
 flutter:
   # The following line ensures that the Material Icons font is
