--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -100,9 +100,11 @@ jobs:
           wget -O appimagetool "https://github.com/AppImage/appimagetool/releases/download/continuous/appimagetool-x86_64.AppImage"
           chmod +x appimagetool
           mv appimagetool /usr/local/bin/
+          ldd --version
       - name: Build-Linux-APP
         working-directory: ./packages/app/
         run: |
+          wget -O libisar.so "https://github.com/isar-community/isar-community/releases/download/3.3.0-dev.3/libisar_linux_x64.so"
           echo "PROJECT_NAME=Keychat" > .env
           export PROTOC=$(which protoc)
           fastforge package \
