for linux build

--- a/packages/app/linux/CMakeLists.txt
+++ b/packages/app/linux/CMakeLists.txt
@@ -124,6 +124,13 @@ foreach(bundled_library ${PLUGIN_BUNDLED_LIBRARIES})
     COMPONENT Runtime)
 endforeach(bundled_library)
 
+# Install app icon for Linux packaging
+install(FILES "${CMAKE_SOURCE_DIR}/assets/logo.png"
+  DESTINATION "${CMAKE_INSTALL_PREFIX}/share/icons"
+  RENAME "keychat.png"
+  COMPONENT Runtime
+)
+
 # Fully re-copy the assets directory on each build to avoid having stale files
 # from a previous install.
 set(FLUTTER_ASSET_DIR_NAME "flutter_assets")
