build for windows

--- a/packages/app/windows/packaging/exe/make_config.yaml
+++ b/packages/app/windows/packaging/exe/make_config.yaml
@@ -1,5 +1,5 @@
 app_id: e9834b7f-d83c-4129-b42b-99c39cbe3384
-publisher: Keyme
+publisher: KEYME
 publisher_url: https://github.com/keychat-io/keychat-app
 display_name: Keychat
 create_desktop_icon: true
