--- a/packages/app/linux/CMakeLists.txt
+++ b/packages/app/linux/CMakeLists.txt
@@ -68,7 +68,7 @@ add_executable(${BINARY_NAME}
   "${FLUTTER_MANAGED_DIR}/generated_plugin_registrant.cc"
 )
 set_target_properties(${BINARY_NAME} PROPERTIES
-    OUTPUT_NAME "Keychat"
+    OUTPUT_NAME "keychat"
 )
 
 # Apply the standard set of build settings. This can be removed for applications
