--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -98,6 +98,7 @@ dependencies:
   flutter_json_view: ^1.1.5
   json_serializable: ^6.9.0
   giphy_get: ^3.6.1+1
+  emoji_picker_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
