--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   json_annotation: ^4.9.0
   keychat_rust_ffi_plugin: 1.0.0
   keychat_ecash: 1.0.0
-  isar_community: 3.3.0-dev.3
-  isar_community_flutter_libs: 3.3.0-dev.3
+  isar_community: 3.3.0
+  isar_community_flutter_libs: 3.3.0
   share_plus: ^12.0.0
   flutter_linkify: ^6.0.0
   permission_handler: ^12.0.0+1
@@ -105,7 +105,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  isar_community_generator: 3.3.0-dev.3
+  isar_community_generator: 3.3.0
   flutter_launcher_icons: ^0.14.4
   lints: ^6.0.0
   flutter_lints: ^6.0.0
