--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ env:
   # .ref == refs/heads/feature/new-login
   # .ref_name == new-login
   IS_STABLE: ${{ !contains(github.ref, '-') }}
-  FLUTTER_VERSION: "3.35.7"
+  FLUTTER_VERSION: "3.38.0"
 
 jobs:
   get-version:
@@ -59,7 +59,7 @@ jobs:
           echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
   build-linux:
-    if: false
+    # if: false
     runs-on: ubuntu-22.04
     needs: get-version
     steps:
@@ -94,6 +94,11 @@ jobs:
           dart pub global activate melos 7.1.1
           dart pub global activate fastforge
           melos bootstrap
+      - name: Configure .env
+        working-directory: ./packages/app/
+        run: echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
       - name: Install appimage
         run: |
           sudo apt install locate
@@ -104,8 +109,6 @@ jobs:
       - name: Build-Linux-APP
         working-directory: ./packages/app/
         run: |
-          wget -O linux/libisar.so "https://github.com/isar-community/isar-community/releases/download/3.3.0-dev.3/libisar_linux_x64.so"
-          echo "PROJECT_NAME=Keychat" > .env
           export PROTOC=$(which protoc)
           fastforge package \
             --flutter-build-args "dart-define-from-file=.env,target=lib/main.dart,verbose" \
@@ -151,12 +154,19 @@ jobs:
           dart pub global activate melos 7.1.1
           dart pub global activate fastforge
           melos bootstrap
+      - name: Configure .env
+        working-directory: ./packages/app/
+        shell: pwsh
+        run: |
+          $decoded = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String($env:ENV_KEY))
+          $decoded | Out-File -FilePath .env -Encoding utf8
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v2
       - name: Build-Windows-APP
         working-directory: ./packages/app/
         run: |
-          echo "PROJECT_NAME=Keychat" | Out-File -FilePath .env -Encoding utf8
           fastforge package --platform windows --targets exe --artifact-name 'Keychat-{{build_name}}+{{build_number}}-{{platform}}-x86_64-setup.{{ext}}'
       - name: Upload
         uses: actions/upload-artifact@v4
@@ -410,7 +420,7 @@ jobs:
   upload:
     # if: false # Temporarily disabled for testing
     permissions: write-all
-    needs: [get-version, build-windows, build-android] # , build-linux, build-macos
+    needs: [get-version, build-windows, build-android, build-linux] #  build-macos
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
