--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   isar_community_flutter_libs: 3.3.0
   share_plus: ^12.0.0
   flutter_linkify: ^6.0.0
-  permission_handler: ^12.0.0+1
   qr_flutter: ^4.1.0
   settings_ui: ^2.0.2
   search_page: ^2.3.0
@@ -99,6 +98,7 @@ dependencies:
   json_serializable: ^6.9.0
   giphy_get: ^3.6.1+1
   emoji_picker_flutter: ^3.1.0
+  permission_master: ^0.0.17
 
 dev_dependencies:
   flutter_test:
