Enhance build scripts for timing feedback and update dependencies for compatibility with Java 21

--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -31,11 +31,13 @@ android {
     namespace "com.keychat.io"
     ndkVersion flutterNDKVersion
     compileOptions {
+        // Ensures Java 21 compatibility.
         sourceCompatibility JavaVersion.VERSION_21
         targetCompatibility JavaVersion.VERSION_21
     }
 
     kotlinOptions {
+        // Align Kotlin with Java 21 bytecode.
         jvmTarget = '21'
     }
 
