--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,31 @@ on:
         description: "Deployment environment"
         required: false
         type: string
+      build_linux_x86_64:
+        description: "Build Linux x86_64"
+        required: false
+        default: false
+        type: boolean
+      build_linux_aarch64:
+        description: "Build Linux aarch64"
+        required: true
+        default: false
+        type: boolean
+      build_windows_x86_64:
+        description: "Build Windows"
+        required: false
+        default: false
+        type: boolean
+      build_android:
+        description: "Build Android"
+        required: false
+        default: false
+        type: boolean
+      build_macos:
+        description: "Build macOS"
+        required: false
+        default: false
+        type: boolean
   # pull_request:
   #   types: [closed]
   #   branches:
@@ -58,9 +83,79 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
-  build-linux:
-    # if: false
+  build-linux-x86_64:
+    if: ${{ inputs.build_linux_x86_64 }}
     runs-on: ubuntu-22.04
+    needs: get-version
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          fetch-depth: 2
+      - name: setup rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+          targets: x86_64-unknown-linux-gnu,aarch64-unknown-linux-gnu
+      - name: Setup-Linux
+        run: |
+          echo "Building for platform: linux"
+          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa libsecret-1-dev
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          cache: true
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "29.3"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install melos-fastforge
+        run: |
+          dart pub global activate melos 7.1.1
+          dart pub global activate fastforge
+          melos bootstrap
+      - name: Configure .env
+        working-directory: ./packages/app/
+        run: echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
+      - name: Install appimage
+        run: |
+          sudo apt install locate
+          wget -O appimagetool "https://github.com/AppImage/appimagetool/releases/download/continuous/appimagetool-x86_64.AppImage"
+          chmod +x appimagetool
+          mv appimagetool /usr/local/bin/
+          ldd --version
+      - name: Build-APP
+        working-directory: ./packages/app/
+        run: |
+          export PROTOC=$(which protoc)
+          fastforge package \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main.dart,verbose" \
+            --platform linux \
+            --targets deb,rpm,appimage \
+            --artifact-name 'Keychat-{{build_name}}+{{build_number}}-{{platform}}-amd64.{{ext}}'
+        env:
+          BUILD_NAME: ${{ needs.get-version.outputs.version_short }}
+          BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
+      - name: Upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifact-linux-x86_64
+          path: ./dist
+          overwrite: true
+      - name: Clean up
+        run: |
+          rm -f .env
+          cd ./packages/app/ && rm -f .env
+  build-linux-aarch64:
+    if: ${{ inputs.build_linux_aarch64 }}
+    runs-on: ubuntu-22.04-arm
     needs: get-version
     steps:
       - name: Checkout
@@ -114,14 +209,14 @@ jobs:
             --flutter-build-args "dart-define-from-file=.env,target=lib/main.dart,verbose" \
             --platform linux \
             --targets deb,rpm,appimage \
-            --artifact-name 'Keychat-{{build_name}}+{{build_number}}-{{platform}}-amd64.{{ext}}'
+            --artifact-name 'Keychat-{{build_name}}+{{build_number}}-{{platform}}-arm64.{{ext}}'
         env:
           BUILD_NAME: ${{ needs.get-version.outputs.version_short }}
           BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: artifact-linux-x86_64
+          name: artifact-linux-arm64
           path: ./dist
           overwrite: true
       - name: Clean up
@@ -129,8 +224,8 @@ jobs:
           rm -f .env
           cd ./packages/app/ && rm -f .env
 
-  build-windows:
-    # if: false # Temporarily disabled for testing
+  build-windows-x86_64:
+    if: ${{ inputs.build_windows_x86_64 }}
     runs-on: windows-2022
     needs: get-version
     steps:
@@ -176,7 +271,7 @@ jobs:
           overwrite: true
 
   build-android:
-    # if: false # Temporarily disabled for testing
+    if: ${{ inputs.build_android }}
     runs-on: ubuntu-22.04
     needs: get-version
     steps:
@@ -272,7 +367,7 @@ jobs:
           rm -f android/key.properties
           rm -f .env
   build-macos:
-    if: false # Temporarily disabled for testing
+    if: ${{ inputs.build_macos }}
     runs-on: macos-latest
     needs: get-version
     steps:
@@ -418,9 +513,16 @@ jobs:
           rm -f .env
           rm -f macos/Runner/GoogleService-Info.plist
   upload:
-    # if: false # Temporarily disabled for testing
+    if: ${{ always() }}
     permissions: write-all
-    needs: [get-version, build-windows, build-android, build-linux] #  build-macos
+    needs:
+      [
+        get-version,
+        build-linux-x86_64,
+        build-linux-aarch64,
+        build-windows-x86_64,
+        build-android,
+      ]
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
