--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ on:
         default: false
         type: boolean
       build_windows_x86_64:
-        description: "Build Windows"
+        description: "Build Windows x86_64"
         required: false
         default: false
         type: boolean
@@ -177,7 +177,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+          flutter-version: 3.38.1
           cache: true
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
