--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -163,6 +163,13 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 2
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: master
+          flutter-version: 3.38.1
+          cache: true
+      - run: flutter --version
       - name: setup rust
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -174,11 +181,6 @@ jobs:
           sudo apt-get update -y && sudo apt-get upgrade -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa libsecret-1-dev
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: 3.38.1
-          cache: true
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
