--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,13 +20,18 @@ on:
         required: false
         default: true
         type: boolean
-      build_linux_aarch64:
-        description: "Build Linux aarch64"
+      build_linux_arm64:
+        description: "Build Linux arm64"
         required: false
         default: true
         type: boolean
       build_windows_x86_64:
         description: "Build Windows x86_64"
+        required: false
+        default: true
+        type: boolean
+      build_windows_arm64:
+        description: "Build Windows arm64"
         required: false
         default: true
         type: boolean
@@ -165,8 +170,8 @@ jobs:
         run: |
           chmod +x ./scripts/cleanup.sh
           ./scripts/cleanup.sh "${{ steps.import_gpg.outputs.fingerprint }}" "."
-  build-linux-aarch64:
-    if: ${{ github.event_name == 'push' || inputs.build_linux_aarch64 }}
+  build-linux-arm64:
+    if: ${{ github.event_name == 'push' || inputs.build_linux_arm64 }}
     runs-on: ubuntu-24.04-arm
     needs: get-version
     steps:
@@ -306,6 +311,70 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: artifact-windows-x86
+          path: ./dist
+          overwrite: true
+      - name: Clean up
+        shell: bash
+        run: |
+          chmod +x ./scripts/cleanup.sh
+          ./scripts/cleanup.sh "${{ steps.import_gpg.outputs.fingerprint }}" "."
+
+  build-windows-arm64:
+    if: ${{ github.event_name == 'push' || inputs.build_windows_arm64 }}
+    runs-on: windows-11-arm
+    needs: get-version
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          fetch-depth: 2
+      - name: Import GPG Key
+        uses: crazy-max/ghaction-import-gpg@v6
+        id: import_gpg
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          cache: true
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "29.3"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install melos-fastforge
+        run: |
+          dart pub global activate melos 7.3.0
+          dart pub global activate fastforge
+          melos bootstrap
+      - name: Configure .env
+        working-directory: ./packages/app/
+        shell: pwsh
+        run: |
+          $decoded = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String($env:ENV_KEY))
+          $decoded | Out-File -FilePath .env -Encoding utf8
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
+      - name: Add MSBuild to PATH
+        uses: microsoft/setup-msbuild@v2
+      - name: Build-Windows-APP
+        working-directory: ./packages/app/
+        run: |
+          fastforge package --platform windows --targets exe --artifact-name 'Keychat-{{build_name}}+{{build_number}}-{{platform}}-arm64-setup.{{ext}}'
+      - name: GPG Sign
+        shell: bash
+        run: |
+          chmod +x ./scripts/gpg-sign.sh
+          ./scripts/gpg-sign.sh ./dist "exe"
+        env:
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      - name: Upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifact-windows-arm64
           path: ./dist
           overwrite: true
       - name: Clean up
@@ -574,8 +643,9 @@ jobs:
       [
         get-version,
         build-linux-x86_64,
-        build-linux-aarch64,
+        build-linux-arm64,
         build-windows-x86_64,
+        build-windows-arm64,
         build-android,
       ]
     runs-on: ubuntu-22.04
